@@ -75,3 +75,7 @@ Feature: Nested Elements
   Scenario: Finding a h1 within a div
     When I search for a h1 located list in a div
     Then I should see the nested h1s text should be "h1's are cool"
+
+  Scenario: Finding a h2 within a div
+    When I search for a h2 located list in a div
+    Then I should see the nested h2s text should be "h2's are cool"
