@@ -208,6 +208,16 @@ module Druid
       Druid::Elements::Heading.new element
     end
 
+    def h2_text_for identifier
+      identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h2')
+      element = driver.instance_eval "#{nested_frames(frame_identifiers)}h2(identifier).text"
+    end
+
+    def h2_for identifier
+      identifier, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h2')
+      element = driver.instance_eval "#{nested_frames(frame_identifiers)}h2(identifier)"
+      Druid::Elements::Heading.new element
+    end
 
     private
 
